restructure files